styles/globals.css
:root {
    --rounded-btn: .5rem;
    --b1: 0 0% 100%;
    --bc: 0 0% 62%;
}

.modal-window {
    position: fixed;
    background-color: rgba(255, 255, 255, 0.25);
    z-index: 999;
    visibility: hidden;
    opacity: 0;
    pointer-events: none;
    transition: all 0.3s;
}

.modal-window:target {
    visibility: visible;
    opacity: 1;
    pointer-events: auto;
}

.modal-window>div {
    width: 400px;
    position: absolute;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 24px 48px;
    border-radius: 1rem;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 2em;
    background: white;
}

.modal-window div:not(:last-of-type) {
    margin-bottom: 15px;
}

.modal-window header {
    font-weight: bold;
}

.modal-window h1 {
    font-size: 150%;
    margin: 0 0 15px;
}

.modal-close {
    color: #aaa;
    line-height: 50px;
    font-size: 80%;
    position: absolute;
    right: 0;
    text-align: center;
    top: 0;
    width: 70px;
    text-decoration: none;
}

.modal-close:hover {
    color: black;
}

body {
    overscroll-behavior: none;
}

.input {
    line-height: 1.5rem;
    border-width: 1px;
}

.input-bordered {
    border-color: hsl(var(--bc));
    background-color: hsl(var(--b1));
    border-radius: var(--rounded-btn, .5rem);
}

.label {
    display: flex;
    user-select: none;
    align-items: center;
    justify-content: space-between;
}

.label-text-alt {
    color: #aaa;
}

ol.my-links, ul.my-links {
    list-style: auto;
}

.my-links li {
    margin-left: 1rem;
}

/* NOTE: Hide the ssr user avatar once the dynamic one loads */
#user-button:has(div:nth-of-type(2)) > div:nth-child(1) {
    display: none;
}

#auth-bar:has(#sign-in-button) #ssr-user-avatar {
    display: none;
}

